Removed Blur On CTA To Prevent It From Peeking Through Blurred Nav

--- a/static/hero.css
+++ b/static/hero.css
@@ -51,7 +51,6 @@
     font-weight: bold;
     padding: 12px 24px;
     background-color: #ffffff10;
-    backdrop-filter: blur(20px);
     border: #ffffff40 1px solid;
     box-shadow: none;
     text-decoration: none;
